dist/1.0/bin/sample/retrieveUnpackaged/objects/Circuit_Data__c.object
<CustomObject>
    <description>Information about OSS Circuits</description>
    <fields>
        <fullName>Circuit_GP__c</fullName>
        <label>Circuit GP</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L1__c</fullName>
        <label>L1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2__c</fullName>
        <label>L2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_A__c</fullName>
        <description>Logical Interface [A]</description>
        <inlineHelpText>Logical Interface [A]</inlineHelpText>
        <label>LI_A</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_B__c</fullName>
        <description>Logical Interface [B]</description>
        <inlineHelpText>Logical Interface [B]</inlineHelpText>
        <label>LI_B</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME__c</fullName>
        <description>Circuit Name</description>
        <inlineHelpText>Circuit Name</inlineHelpText>
        <label>NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NE_A__c</fullName>
        <description>Network Element [A]</description>
        <inlineHelpText>Network Element [A]</inlineHelpText>
        <label>NE_A</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NE_B__c</fullName>
        <description>Network Element [B]</description>
        <inlineHelpText>Network Element [B]</inlineHelpText>
        <label>NE_B</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSS_Link__c</fullName>
        <description>Opens Circuit Details in new window</description>
        <formula>IF(  NOT(ISBLANK(Name)) , HYPERLINK(&apos;http://dione1.gtsgroup.cz/idengine/ce_ie_circ/open.htm?rec_id=&apos;+ Name + &apos;&amp;gp_id=&apos; +  Circuit_GP__c , &apos;Open OSS&apos;, &apos;_blank&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opens Circuit Details in new window</inlineHelpText>
        <label>OSS Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_A__c</fullName>
        <description>Physical Interface [A]</description>
        <inlineHelpText>Physical Interface [A]</inlineHelpText>
        <label>PI_A</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_B__c</fullName>
        <description>Physical Interface [B]</description>
        <inlineHelpText>Physical Interface [B]</inlineHelpText>
        <label>PI_B</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POP_A__c</fullName>
        <description>Point of Presence [A]</description>
        <inlineHelpText>Point of Presence [A]</inlineHelpText>
        <label>POP_A</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POP_B__c</fullName>
        <description>Point of Presence [B]</description>
        <inlineHelpText>Point of Presence [B]</inlineHelpText>
        <label>POP_B</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_B_Name__c</fullName>
        <description>Field stores Region Name retireved from OSS through GET TASKS FROM OSS functionality. [PROV]_PL_008: Geografical Task assigning to Queues [https://helpdeskce.in.gtsce.com/browse/CECOLSVII-67]</description>
        <inlineHelpText>Region B Name retrieved from OSS</inlineHelpText>
        <label>Region B Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <description>Field stores Region Name retireved from OSS through GET TASKS FROM OSS functionality. [PROV]_PL_008: Geografical Task assigning to Queues</description>
        <inlineHelpText>Region A Name retrieved from OSS</inlineHelpText>
        <label>Region A Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_A__c</fullName>
        <label>SP_A</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_B__c</fullName>
        <label>SP_B</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <label>STATUS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECHNOLOGY__c</fullName>
        <description>Circuit Technology</description>
        <inlineHelpText>Circuit Technology</inlineHelpText>
        <label>TECHNOLOGY</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Circuit Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Circuit_GP__c</columns>
        <columns>NAME</columns>
        <columns>NAME__c</columns>
        <columns>OSS_Link__c</columns>
        <columns>TECHNOLOGY__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Circuit ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Circuits Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>